# devboard

./: .copier-answers.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  duties.py  index.html  index.md  llms-full.txt  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: 1-bug.md  bug_report.md  config.yml
.github/workflows/: ci.yml  release.yml
changelog/: index.html
code_of_conduct/: index.html
config/: pytest.ini  ruff.toml
config/vscode/: launch.json
contributing/: index.html
coverage/: covindex.html  d_53d324629211f896_app_py.html  d_53d324629211f896_board_py.html  d_53d324629211f896_cli_py.html  d_53d324629211f896_datatable_py.html  d_53d324629211f896_debug_py.html  d_53d324629211f896_default_board_py.html  d_53d324629211f896_modal_py.html  d_53d324629211f896_notifications_py.html  d_53d324629211f896_projects_py.html  d_a44f0ac069e85531_conftest_py.html  d_a44f0ac069e85531_test_cli_py.html  index.html  status.json
credits/: index.html
docs/: index.md  tutorial.md
docs/examples/: screenshot.py
docs/insiders/: changelog.md  goals.yml  index.md  installation.md
docs/reference/: api.md
examples/: repositories.py  screenshot.py
examples/columns/: commit.py  commit_pull.py  commit_pull_push.py  commit_pull_push_release.py  pull.py
insiders/: goals.yml  index.html
insiders/changelog/: index.html
insiders/installation/: index.html
license/: index.html
reference/SUMMARY/: index.html
reference/api/: index.html  index.md
reference/devboard/: index.html
scripts/: gen_credits.py  insiders.py  make
search/: search_index.json
src/devboard/: __init__.py  __main__.py  app.py  (+6 more)
tests/: __init__.py  test_api.py  test_cli.py
tutorial/: index.html
(+28 files in other folders)
